@@ -1,7 +1,7 @@
 AUX raptor-1.4.16-lm.patch 406 RMD160 3553cdb8253e1fe2381d1be4c11f6d3371afff65 SHA1 b217d3b0d208ea72f489a3f3be40e7038d922b29 SHA256 ce43cd244d7c32f5ee61bc052e595c5f1ffef79f640588328a7730cae7a0da87
 DIST raptor-1.4.16.tar.gz 1510527 RMD160 a06ab396171d63df7877ea538295c3286e8651d1 SHA1 b85488c588ea49a44428bfa28c866047d65dd2ea SHA256 450b04ffd1553288507d20aa04da7b874faeec13dd2ea1b7af5ffdab957e85b0
 DIST raptor-1.4.17.tar.gz 1580715 RMD160 2c5a74ff98f9a461617679f0dd6cba4ee5d70335 SHA1 44db419540bf364aba76db84f6ce9ff739020b0f SHA256 4981ee12defae25384f890267036e0bad891ffa118da10d29f6bf637ab2faaf7
-EBUILD raptor-1.4.16.ebuild 1472 RMD160 bc4a99f2752611a909d20654fadaef55c5e50c3b SHA1 603a8b7d53d98c951255743c8ec2acfeb64bdb36 SHA256 6933df4b630b032773e35506bdd7826266049b24cb82d065e9bd6477440b42da
-EBUILD raptor-1.4.17.ebuild 1437 RMD160 96ceeb0a8b12fd8a9f8567afce502dd5dbbd12aa SHA1 fe12576aae6446bfb0735a24b97b4322b70f6539 SHA256 36dd6b95dff06ba1770ac3b105d48c1707368c344ef9d2e573f6958d35980185
-MISC ChangeLog 6637 RMD160 e192189c94e4a77b69d4feabb06f188551893828 SHA1 6f7eef5b2f52ae3a1483ad6198f25046daaabe62 SHA256 0231fa2e6f1533f6b64e843c549301e64f9e58ba774dc337c88a0d4266a80203
+EBUILD raptor-1.4.16.ebuild 1490 RMD160 ad009922752ff2bb1483314b653ea13359e54188 SHA1 21197d434c45be126f5f5e05756d6de3210f4274 SHA256 1647d2b8aa7a5aa27297ba78c729209ba786968ebb21a4515a947c2d59a52820
+EBUILD raptor-1.4.17.ebuild 1453 RMD160 0126872ed3d7a76566edf9d99919c8156600db78 SHA1 f46456577af61bee7913af942b96a665d8a2b7a5 SHA256 f831bc2ae9a42a4406890c7dc1d0ff3a475f8132648d429e53ec822bc57e3c02
+MISC ChangeLog 6784 RMD160 9753b021c6901d7bf10e2621d97b8697b8fb12d0 SHA1 3dc8e7e6b399874b9a5e75bf2dcddf1d3b1c7c08 SHA256 df0bc5f6c870c61bbc5d9e628e6ca86f033c6c3785790f100543cecd21490a81
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
