@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/raptor/raptor-1.4.17.ebuild,v 1.1 2008/04/14 22:19:12 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/raptor/raptor-1.4.17.ebuild,v 1.2 2008/05/12 09:39:42 aballier Exp $
 
 EAPI="prefix"
 
@@ -21,6 +21,7 @@ RDEPEND="unicode? ( >=dev-libs/glib-2 )
 	curl? ( net-misc/curl )
 	dev-libs/libxslt"
 DEPEND="${RDEPEND}
+	sys-devel/flex
 	dev-util/pkgconfig"
 
 src_unpack() {
