@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/raptor
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/raptor/ChangeLog,v 1.57 2008/04/14 22:19:12 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/raptor/ChangeLog,v 1.58 2008/05/12 09:39:42 aballier Exp $
+
+  12 May 2008; Alexis Ballier <aballier@gentoo.org> raptor-1.4.16.ebuild,
+  raptor-1.4.17.ebuild:
+  add flex build dep, thanks Diego, bug #221395
 
 *raptor-1.4.17 (14 Apr 2008)
 
